# archdiagram

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
archdiagram/: __init__.py  cli.py
archdiagram/emit/: __init__.py  drawio.py  iconglyph.py  pdf.py  svgcanvas.py  vsdx.py
archdiagram/layout/: __init__.py  engine.py
archdiagram/rasterize/: __init__.py  resvg.py
archdiagram/registry/: __init__.py  catalog.py  icons.py
archdiagram/registry/catalog_data/: aws.json  azure.json  gcp.json  kubernetes.json
archdiagram/spec/: __init__.py  model.py  validate.py
examples/: aws_kelvin.json  azure_foundry.json  gcp_agentic.json  mcp.json  sample_spec.json
mcp_server/: __init__.py  server.py
node/: package.json  rasterize.mjs  svg2pdf.mjs
skill/: SKILL.md
tests/: test_catalog.py  test_emitters.py  test_layout.py  test_validate.py
tools/: __init__.py  download_icons.py  icon_sources.json
